--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,12 @@
 <resources>
 
     <string name="app_name">PxAdapter</string>
-    <string name="hello_world">Device Detail</string>
+    <string name="hello_world">设备详情</string>
     <string name="action_settings">Settings</string>
+    <string name="auto_calculate">当前设备</string>
+    <string name="hand_calculate">手动换算</string>
+    <string name="error_tips">请输入完整数据！</string>
+    <string name="file_path_tips">文件存放位置为：</string>
     <string name="click_tips">create \"px_dimens.xml\" ！</string>
 
 </resources>
